Mon Jun 23 05:18:53 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkutils.c (gxk_tree_view_get_row_area): fix
	uninitialized variable access.

Sat Jun 21 21:43:37 2003  Tim Janik  <timj@gtk.org>

	* docs/site-news.texi: announce release.

Sat Jun 21 19:28:53 2003  Tim Janik  <timj@gtk.org>

	* configure.in: release 0.5.2, binary & interface ages 0.

Fri Jun 20 07:03:08 2003  Alper Ersoy  <dirt@gtk.org>

	* docs/generated/css/default.css: fixed toc links underlining.

Fri Jun 20 00:29:55 2003  Tim Janik  <timj@gtk.org>

	* fix looking for mad.pc to detect libmad which works only
	for the debian package.

Thu Jun 19 23:21:07 2003  Tim Janik  <timj@gtk.org>

	* configure.in: up to v0.5.2-rc2.

	* acbeast.m4: support -ftracer for gcc-3.3.
	
	* test/freak-noise.bse:
	* test/midi-test.bse:
	* test/osc-test.bse:
	* test/simple-echo.bse:
	* test/simple-loop.bse:
	* test/test-song.bse:
	* test/wave-midi.bse: upgrade to 0.5.2 BSE format.
	
Tue Jun 17 14:30:54 2003  Tim Janik  <timj@gtk.org>

	* shell/progressor-example.scm: simplyfied code, fixed comments.

	* beast-gtk/bstusermessage.c (user_message): fix callback argument which
	is of type SfiChoice, not an enum type.

Tue Jun 17 04:32:34 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnetrouter.c (popup_entries): add snet scripts to
	modules menu.

	* shell/modules2grid.scm: new script to align modules within a
	synthesis network.

Mon Jun 16 20:37:38 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c (bst_app_reload_supers): don't show internal
	supers.

	* docs/site-download.texi: comment on needing texitheque when building
	from CVS.

Fri Jun 13 20:11:08 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstpartdialog.c (bst_part_dialog_set_proxy): listen to undo/
	redo stack changes on the corresponding project.

	* beast-gtk/bstpartdialog.c:
	(bst_part_dialog_update_activatable): update menu items when actions
	change their activatable state.

Thu Jun 12 22:18:00 2003  Tim Janik  <timj@gtk.org>
