@@ -1,4 +1,5 @@
 FIXMES:
+- add option to disable ladspa plugin loading
 - bse_category_copy_shallow() overwrites and leaks newly allocated rec_copy->icon
 - bse_icon_copy_shallow() overwrites and leaks newly allocated rec_copy->pixels
 - add demo song
@@ -14,7 +15,6 @@ FIXMES:
 - get rid of super->mod_time
 - add BEAST_SAMPLE_DIRS, describe env variables in man page
 - rename gslwave files appropriately
-- add option to disable ladspa plugin loading
 - don't always rebuild lib-list [Rebuild]-button
 - nuke BSE file crawling functions
 - fix API for file matching in SFI
